--- a/assets/css/admin-css.css
+++ b/assets/css/admin-css.css
@@ -1,3 +1,7 @@
+h1.we-title {
+  margin-bottom: 30px;
+}
+
 .nav-tabs {
   float: left;
   width: 100%;
@@ -17,6 +21,7 @@
   border-radius: 4px 4px 0 0;
   float: left;
   text-decoration: none;
+  font-weight: 400;
 }
 .nav-tabs > li > a:hover {
   border-color: #eee #eee #ddd;
@@ -34,9 +39,12 @@
   width: 100%;
   display: none;
 }
+.we-container {
+  padding: 30px;
+}
 .tab-content > .tab-pane.active {
   display: block;
-  padding: 10px;
+
   background-color: #fff;
   -webkit-box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
   box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
@@ -86,6 +94,9 @@ div.ui-toggle label div {
 div.ui-toggle label:hover,
 div.ui-toggle label > div:hover {
   cursor: pointer;
+}
+tr.ui-toggle th > label {
+  font-size: 0.75rem;
 }
 
 /* RTL styles */
