--- a/assets/css/iranyekan-font.css
+++ b/assets/css/iranyekan-font.css
@@ -2,38 +2,42 @@
   font-family: iranyekan;
   font-style: light;
   font-weight: 300;
-  src: url('../fonts/IranYekan/iranyekanweblightfanum.woff') format('woff');
+  src: url("../fonts/IranYekan/iranyekanweblightfanum.woff") format("woff");
 }
 @font-face {
   font-family: iranyekan;
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/IranYekan/iranyekanwebregularfanum.woff') format('woff');
+  src: url("../fonts/IranYekan/iranyekanwebregularfanum.woff") format("woff");
 }
 
 @font-face {
   font-family: iranyekan;
   font-style: bold;
   font-weight: 700;
-  src: url('../fonts/IranYekan/iranyekanwebboldfanum.woff') format('woff');
+  src: url("../fonts/IranYekan/iranyekanwebboldfanum.woff") format("woff");
 }
 
-body {
-  font-family: 'iranyekan', sans-serif !important;
-  font-weight: 400;
-}
+body,
 p,
 a,
 button,
-input {
-  font-family: 'iranyekan', sans-serif !important;
-}
+input,
+span.display-name,
+span.ab-label,
+label,
+.components-menu-group__label,
+.components-notice__content,
+input,
+textarea,
+button,
+select,
+option,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: 'iranyekan', sans-serif !important;
-  font-weight: 700;
+  font-family: "iranyekan", sans-serif !important;
 }
