--- a/assets/css/elementor-editor.css
+++ b/assets/css/elementor-editor.css
@@ -2,13 +2,24 @@
   font-family: iranyekan;
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/IranYekan/iranyekanwebregularfanum.woff') format('woff');
+  src: url("../fonts/IranYekan/iranyekanwebregularfanum.woff") format("woff");
 }
 body,
 button,
 a,
 p,
 .elementor-panel,
-.eps-app {
-  font-family: 'iranyekan', sans-serif !important;
+.eps-app,
+input,
+textarea,
+button,
+.dialog-widget-content,
+.elementor-add-section-drag-title,
+.elementor-color-picker__header,
+.elementor-select-preset-title,
+.mce-content-body,
+.elementorwpeditor,
+.media-frame-title,
+body.rtl {
+  font-family: "iranyekan", sans-serif !important;
 }
