--- a/assets/css/vazir-font.css
+++ b/assets/css/vazir-font.css
@@ -2,38 +2,48 @@
   font-family: iranyekan;
   font-style: light;
   font-weight: 300;
-  src: url('../fonts/Vazir/Vazir-Light-FD.woff2') format('woff');
+  src: url("../fonts/Vazir/Vazir-Light-FD.woff2") format("woff");
 }
 @font-face {
   font-family: iranyekan;
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/Vazir/Vazir-Regular-FD.woff2') format('woff');
+  src: url("../fonts/Vazir/Vazir-Regular-FD.woff2") format("woff");
 }
 
 @font-face {
   font-family: iranyekan;
   font-style: bold;
   font-weight: 700;
-  src: url('../fonts/Vazir/Vazir-Bold-FD.woff2') format('woff');
+  src: url("../fonts/Vazir/Vazir-Bold-FD.woff2") format("woff");
 }
 
-body {
-  font-family: 'iranyekan', sans-serif !important;
-  font-weight: 300;
-}
+body,
 p,
 a,
 button,
-input {
-  font-family: 'iranyekan', sans-serif !important;
-}
+input,
+span.display-name,
+span.ab-label,
+label,
+.components-menu-group__label,
+.components-notice__content,
+.elementor-testimonial__name,
+.elementor-testimonial__title,
+.elementor-testimonial__text,
+.elementor-icon-list-text,
+.elementor-edit-link-title,
+.ab-item,
+input,
+textarea,
+button,
+select,
+option,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: 'iranyekan', sans-serif !important;
-  font-weight: 700;
+  font-family: "iranyekan", sans-serif !important;
 }
