--- a/assets/css/vazir-font.css
+++ b/assets/css/vazir-font.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: iranyekan;
+  font-family: vazir;
   font-style: light;
   font-weight: 300;
   src: url("../fonts/Vazir/Vazir-Light-FD.woff2") format("woff");
 }
 @font-face {
-  font-family: iranyekan;
+  font-family: vazir;
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Vazir/Vazir-Regular-FD.woff2") format("woff");
 }
 
 @font-face {
-  font-family: iranyekan;
+  font-family: vazir;
   font-style: bold;
   font-weight: 700;
   src: url("../fonts/Vazir/Vazir-Bold-FD.woff2") format("woff");
@@ -45,5 +45,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "iranyekan", sans-serif !important;
+  font-family: "vazir", sans-serif !important;
 }
