--- a/assets/widgets/css/post-carousel.css
+++ b/assets/widgets/css/post-carousel.css
@@ -13,7 +13,6 @@
   justify-content: flex-end;
   -webkit-align-items: center;
   -webkit-justify-content: flex-end;
-  background-color: #fff;
   flex-shrink: 0;
   -webkit-flex-shrink: 0;
   position: absolute;
@@ -46,11 +45,12 @@
   -webkit-align-self: flex-end;
   -webkit-flex-basis: 50%;
   transform: translateX(-100%);
+  opacity: 0;
   transition: 0.6s all ease-in-out;
 }
 
 .webkima-el-carousel-item__image img {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
@@ -68,8 +68,8 @@
   opacity: 0;
   visibility: hidden;
   transition: 0.6s all ease-in-out;
-  margin-top: 35px;
-  margin-bottom: 35px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .webkima-el-carousel-item__btn {
@@ -85,12 +85,34 @@
 
 .webkima-el-carousel__nav {
   position: absolute;
-  left: 0;
   z-index: 2;
-  background-color: #fff;
-  bottom: 0;
 }
 
+.webkima-el-carousel__nav.left {
+  left: 0;
+}
+.webkima-el-carousel__nav.center-hor {
+  left: 50%;
+  transform: translateX(-50%);
+}
+.webkima-el-carousel__nav.right {
+  right: 0;
+}
+.webkima-el-carousel__nav.top {
+  top: 0;
+}
+.webkima-el-carousel__nav.center-ver {
+  top: 50%;
+  transform: translateY(-50%);
+}
+.webkima-el-carousel__nav.bottom {
+  bottom: 0;
+}
+.webkima-el-carousel__nav.center-ver.center-hor {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .webkima-el-carousel__icon {
   display: inline-block;
   vertical-align: middle;
@@ -101,8 +123,10 @@
 .webkima-el-carousel__arrow {
   cursor: pointer;
   display: inline-block;
-  padding: 11px 15px;
+  padding: 15px;
   position: relative;
+  line-height: 0;
+  transition: background-color .15s ease;
 }
 
 .webkima-el-carousel__arrow:nth-child(1):after {
@@ -110,10 +134,9 @@
   left: -3px;
   position: absolute;
   width: 1px;
-  background-color: #b0b0b0;
   height: 14px;
   top: 50%;
-  margin-top: -7px;
+  transform: translateY(-50%);
 }
 
 .active {
@@ -133,9 +156,21 @@
 .active .webkima-el-carousel-item__image {
   transition: 0.6s all ease-in-out;
   transform: translateX(0);
+  opacity: 1;
+}
+
+.webkima-el-oneline-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 @media screen and (max-width: 768px) {
+  .webkima-el-carousel {
+    min-height: 580px !important;
+  }
   .webkima-el-carousel-item {
     flex-direction: column-reverse;
   }
