Added webpack to bundle the assets.

--- a/assets/css/elementor-editor.css
+++ b/assets/css/elementor-editor.css
@@ -1,26 +1,1 @@
-@font-face {
-  font-family: iranyekan;
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/IranYekan/iranyekanwebregularfanum.woff") format("woff");
-}
-
-body,
-button,
-a,
-p,
-.elementor-panel,
-.eps-app,
-input,
-textarea,
-button,
-.dialog-widget-content,
-.elementor-add-section-drag-title,
-.elementor-color-picker__header,
-.elementor-select-preset-title,
-.mce-content-body,
-.elementorwpeditor,
-.media-frame-title,
-body.rtl {
-  font-family: "iranyekan", sans-serif !important;
-}
+@font-face{font-family:iranyekan;font-style:normal;font-weight:400;src:url("../fonts/IranYekan/iranyekanwebregularfanum.woff") format("woff")}.dialog-widget-content,.elementor-add-section-drag-title,.elementor-color-picker__header,.elementor-panel,.elementor-select-preset-title,.elementorwpeditor,.eps-app,.mce-content-body,.media-frame-title,a,body,body.rtl,button,input,p,textarea{font-family:iranyekan,sans-serif!important}
