--- a/assets/css/vazir-font.css
+++ b/assets/css/vazir-font.css
@@ -1,50 +1,1 @@
-@font-face {
-  font-family: vazir;
-  font-style: light;
-  font-weight: 300;
-  src: url("../fonts/Vazir/Vazir-Light-FD.woff2") format("woff");
-}
-
-@font-face {
-  font-family: vazir;
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/Vazir/Vazir-Regular-FD.woff2") format("woff");
-}
-
-@font-face {
-  font-family: vazir;
-  font-style: bold;
-  font-weight: 700;
-  src: url("../fonts/Vazir/Vazir-Bold-FD.woff2") format("woff");
-}
-
-body,
-p,
-a,
-button,
-input,
-span.display-name,
-span.ab-label,
-label,
-.components-menu-group__label,
-.components-notice__content,
-.elementor-testimonial__name,
-.elementor-testimonial__title,
-.elementor-testimonial__text,
-.elementor-icon-list-text,
-.elementor-edit-link-title,
-.ab-item,
-input,
-textarea,
-button,
-select,
-option,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "vazir", sans-serif !important;
-}
+@font-face{font-family:vazir;font-style:light;font-weight:300;src:url("../fonts/Vazir/Vazir-Light-FD.woff2") format("woff")}@font-face{font-family:vazir;font-style:normal;font-weight:400;src:url("../fonts/Vazir/Vazir-Regular-FD.woff2") format("woff")}@font-face{font-family:vazir;font-style:bold;font-weight:700;src:url("../fonts/Vazir/Vazir-Bold-FD.woff2") format("woff")}.ab-item,.components-menu-group__label,.components-notice__content,.elementor-edit-link-title,.elementor-icon-list-text,.elementor-testimonial__name,.elementor-testimonial__text,.elementor-testimonial__title,a,body,button,h1,h2,h3,h4,h5,h6,input,label,option,p,select,span.ab-label,span.display-name,textarea{font-family:vazir,sans-serif!important}
